--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@prismicio/client": "^4.0.0",
     "date-fns": "^2.19.0",
     "next": "10.0.7",
-    "prismic-dom": "^2.2.5",
+    "next-slicezone": "^0.1.2",
+    "prismic-dom": "^2.2.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.2.0",
+    "test": "^0.6.0",
     "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
@@ -42,7 +44,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
-    "sass": "^1.32.8",
+    "sass": "^1.38.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.2"
   }
