--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@prismicio/client": "^4.0.0",
     "date-fns": "^2.19.0",
-    "next": "10.0.7",
+    "next": "^11.1.2",
     "next-slicezone": "^0.1.2",
     "prismic-dom": "^2.2.6",
     "react": "17.0.1",
